--- a/solution/src/main/resources/application.yaml
+++ b/solution/src/main/resources/application.yaml
@@ -5,6 +5,16 @@ spring:
     password: {MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+JWT:
+  secret-key: ${JWT_SECRET_KEY}
+  expiration-time: 86400000
+  header: Authorization
+  prefix: Bearer
+
+mybatis:
+  config-location: classpath:/mybatis-config.xml
+  mapper-locations: classpath:/mybatis/mapper/*.xml
+
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
