--- a/solution/build.gradle
+++ b/solution/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation 'org.mybatis:mybatis:3.5.7'
+	// ModelMapper
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.0.0'
+
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
@@ -37,6 +40,8 @@ dependencies {
 
 	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
+			'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 	// MySQL Connector
 	runtimeOnly 'com.mysql:mysql-connector-j'
