--- a/solution/src/main/resources/application.yaml
+++ b/solution/src/main/resources/application.yaml
@@ -6,8 +6,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 JWT:
-  secret-key: ${JWT_SECRET_KEY}
-  expiration-time: 86400000
+  SECRET_KEY: {JWT_SECRET_KEY}
+  EXPIRATION_TIME: 14400000
   header: Authorization
   prefix: Bearer
 
