--- a/solution/src/main/resources/application.yaml
+++ b/solution/src/main/resources/application.yaml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/service
+    url: jdbc:mysql://localhost:3307/service
     username: {MYSQL_NAME}
     password: {MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 JWT:
-  SECRET_KEY: {JWT_SECRET_KEY}
+  SECRET_KEY: {SECRET_KEY}
   EXPIRATION_TIME: 14400000
   header: Authorization
   prefix: Bearer
@@ -14,6 +14,9 @@ JWT:
 mybatis:
   config-location: classpath:/mybatis-config.xml
   mapper-locations: classpath:/mybatis/mapper/*.xml
+
+ENCRYPT:
+  ENCRYPT_SECRET_KEY: {ENCRYPT_SECRET_KEY}
 
 springdoc:
   swagger-ui:
