--- a/solution/src/main/resources/application.yaml
+++ b/solution/src/main/resources/application.yaml
@@ -4,6 +4,12 @@ spring:
     username: {MYSQL_NAME}
     password: {MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    redis:
+      host: "localhost
+      port: 6379
+      password: {REDIS_PASSWORD}
+      timeout: {REDIS_TIMEOUT}
 
 JWT:
   SECRET_KEY: {SECRET_KEY}
@@ -17,7 +23,6 @@ mybatis:
 
 ENCRYPT:
   ENCRYPT_SECRET_KEY: {ENCRYPT_SECRET_KEY}
-
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
