--- a/solution/src/main/resources/application.yaml
+++ b/solution/src/main/resources/application.yaml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/service
-    username: {MYSQL_NAME}
-    password: {MYSQL_PASSWORD}
+    url: jdbc:mysql://localhost:3306/service
+    username: ${MYSQL_NAME}
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   data:
     redis:
       host: localhost
       port: 6379
-      timeout: {REDIS_TIMEOUT}
+      timeout: ${REDIS_TIMEOUT}
 
 JWT:
   SECRET_KEY: {SECRET_KEY}
@@ -21,8 +21,7 @@ mybatis:
   mapper-locations: classpath:/mybatis/mapper/*.xml
 
 ENCRYPT:
-#  ENCRYPT_SECRET_KEY: {ENCRYPT_SECRET_KEY}
-  ENCRYPT_SECRET_KEY: 12345678901234567890123456789012
+  ENCRYPT_SECRET_KEY: ${ENCRYPT_SECRET_KEY}
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
