--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -1,13 +1,14 @@
-# Build Stage
 FROM openjdk:17-alpine AS builder
-WORKDIR /app
-COPY . .
-RUN ./gradlew bootJar
+COPY gradlew .
+COPY gradle gradle
+COPY build.gradle .
+COPY settings.gradle .
+COPY src src
+COPY mybatis-config.xml .
+RUN chmod +x ./gradlew
+RUN ./gradlew bootJAR
 
-# Runtime Stage
 FROM openjdk:17-alpine
-WORKDIR /app
-COPY --from=builder /app/build/libs/*.jar app.jar
-COPY mybatis-config.xml /app
+COPY --from=builder build/libs/*.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-Duser.timezone=Asia/Seoul", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-Duser.timezone=Asia/Seoul","-jar", "/app.jar"]
