--- a/solution/src/main/resources/application.yaml
+++ b/solution/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/service
+    url: jdbc:mysql://localhost:3307/service
     username: ${MYSQL_NAME}
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -8,17 +8,17 @@ spring:
     redis:
       host: localhost
       port: 6379
-      timeout: ${REDIS_TIMEOUT}
+      timeout: 10000000
 
 JWT:
-  SECRET_KEY: {SECRET_KEY}
+  SECRET_KEY: ${SECRET_KEY}
   EXPIRATION_TIME: 14400000
   header: Authorization
   prefix: Bearer
 
 mybatis:
   config-location: classpath:/mybatis-config.xml
-  mapper-locations: classpath:/mybatis/mapper/*.xml
+#  mapper-locations: classpath:/mybatis/mapper/*.xml
 
 ENCRYPT:
   ENCRYPT_SECRET_KEY: ${ENCRYPT_SECRET_KEY}
